# sortah

./: .brownserve_repository_manifest  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  paket.dependencies
.build/: _init.ps1  build.ps1
.build/tasks/: build_tasks.ps1
.build/tests/: Basic.Binary.Tests.ps1
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/workflows/: builds.yaml  label-pr.yaml  release.yaml  stage-release.yaml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  engine.rs  fsutil.rs  lib.rs  parse.rs  report.rs  store.rs
gui/: Cargo.toml
gui/src/: app.rs  dialogs.rs  lib.rs  models.rs  state.rs  worker.rs
gui/ui/: app.slint
scripts/: install.ps1  install.sh
