[package]
name = "sortah-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1"
regex = "1"
walkdir = "2"
thiserror = "1"
directories = "5"

[dev-dependencies]
tempfile = "3"
