[package]
name = "sortah-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.40", features = ["bundled"] }
csv = "1"
regex = "1"
walkdir = "2"
thiserror = "2"
directories = "6"

[dev-dependencies]
tempfile = "3"
